# RL-project-Groupe-17

./: .gitignore  README.md  main.py  main_robust.py  main_turbo.py  pyproject.toml  requirements.txt
configs/: extension_config.py  shared_core_config.py
core/: dqn_agent.py  evaluation.py  model_architecture.py  sb3_training.py  sb3_training_turbo.py
extension/: advanced_algo.py  custom_env.py  main_extension.py  robustness_eval.py
reports/antoine/: rapport_antoine.aux  rapport_antoine.fdb_latexmk  rapport_antoine.fls  rapport_antoine.out  rapport_antoine.tex
reports/maxence/: maxence_rossignol_report.aux  maxence_rossignol_report.out  maxence_rossignol_report.tex
results/: eval_results.csv  training_rewards.csv
results/checkpoints/: dqn_curriculum_seed52.pt  dqn_custom.pt  dqn_mixed_seed1.pt  dqn_random_seed1.pt  dqn_random_seed52.pt  dqn_seed42.pt  dqn_seed52.pt
results_distant_v2/: eval_results.csv  training_rewards.csv
results_distant_v2/checkpoints/: .gitkeep  dqn_seed42.pt  dqn_seed43.pt  dqn_seed44.pt
results_distant_v2/figures/: .gitkeep
results_distant_v2/videos/: .gitkeep
results_slower/: eval_results.csv  training_rewards.csv
results_slower/checkpoints/: dqn_seed52.pt
results_v3/: eval_results.csv  training_rewards.csv
results_v3/checkpoints/: dqn_seed52.pt  dqn_seed53.pt  dqn_seed54.pt
scripts/: plot_results.py  record_video.py  setup_env.sh  train.sh
slides/: presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
