[project]
name = "rl-project-groupe-17"
version = "0.1.0"
description = "Projet RL - Comparaison DQN maison vs Stable-Baselines3 sur highway-env"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "highway-env>=1.8",
    "gymnasium[other]>=0.28",
    "stable-baselines3>=2.0",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pymupdf>=1.27.2.2",
    "tqdm>=4.67.3",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
